Staging server environment configured

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,7 +10,7 @@
 <div class="container text-center codeshala-heading">
     <h1><span style="color:#fd8900">CODE</span><span style="color:#0289fe">SHALA</span><br/>GET BETTER AT PROGRAMING
     </h1>
-    <h2>
+    <h2 class="d-none d-lg-block d-xl-block">
         We are community of programmers. Our community is lead by professionals who have broad experience in competitve
         programming and software development. Our community mentors are working at top companies and providing
         mentorship to candidates across different colleges. We provide learning courses to make you a better programmer.
