Added Push notifications

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -186,8 +186,10 @@
     </div>
 </div>
 <% include ../partials/footer %>
+<button class="expanded large button js-button" disabled style="display:none">Enable Push Notifications</button>
+<p><pre class="js-subscription" style="display:none"></pre></p>
 </body>
 
 <% include ../partials/footer-scripts %>
-
+<script src="/client.js"></script>
 </html>
