--- a/views/partials/admin-menu.ejs
+++ b/views/partials/admin-menu.ejs
@@ -2,6 +2,9 @@
     <a href="/admin">
         <li class="list-group-item">Admin Home</li>
     </a>
+    <a href="/admin/push">
+        <li class="list-group-item">Push Notifications</li>
+    </a>
     <a href="/admin/courses">
         <li class="list-group-item">View All Courses</li>
     </a>
