--- a/views/pages/course.ejs
+++ b/views/pages/course.ejs
@@ -239,6 +239,14 @@
                             <option value="2022">2022</option>
                         </select>
                     </div>
+                    <div class="form-group">
+                        <label>Referred By: </label>
+                        <input type="text" placeholder="10 digit phone number" id="referer_number" name="referer"
+                               class="form-control" maxlength="10" minlength="10">
+                        <small id="referer_message">Please note this phone number should match phone number of your
+                            referer registered with codeshala
+                        </small>
+                    </div>
                     <br/>
                     <div class="g-recaptcha" data-sitekey="6LfGPlAUAAAAAHckylm7SfwF6gxIcUyHrqBoHGAA"
                          data-callback="enableBtn"></div>
