--- a/views/partials/metadata.ejs
+++ b/views/partials/metadata.ejs
@@ -39,4 +39,4 @@
 <link rel="manifest" href="/assets/favicon/manifest.json">
 <meta name="msapplication-TileColor" content="#f3f3f3">
 <meta name="msapplication-TileImage" content="/assets/favicon/ms-icon-144x144.png">
-<meta name="theme-color" content="#f3f3f3">
+<meta name="theme-color" content="#a1a1a2">
