--- a/views/pages/admin-add-courses.ejs
+++ b/views/pages/admin-add-courses.ejs
@@ -85,7 +85,11 @@
                                 <option value="CLOSED">Closed For Registration</option>
                             </select>
                         </div>
-
+                        <div class="form-group">
+                            <label for="formGroupExampleInput2">Course Thumbnail</label>
+                            <input type="text" name="courseThumbnail" class="form-control" id="formGroupExampleInput2"
+                                   placeholder="e.g. /assets/images/course-icon/algo.png">
+                        </div>
                         <div class="form-group">
                             <label for="formGroupExampleInput2">Course Alias</label>
                             <input type="text" name="alias" class="form-control" id="formGroupExampleInput2"
