--- a/views/pages/course.ejs
+++ b/views/pages/course.ejs
@@ -114,7 +114,7 @@
 <div class="container-fluid codeshala-banner">
     <div class="container text-center codeshala-course-heading">
         <h1>
-            <img src="/assets/images/course-icon/algo.png" height="100px">
+            <img src="<%= course.courseThumbnail %>" height="100px">
             <%= course.name %><br/>
             <span class="text-center codeshala-theme codeshala-course-card-btn">
                 <% if(batch.length){ %>
