--- a/views/pages/admin-add-courses.ejs
+++ b/views/pages/admin-add-courses.ejs
@@ -16,6 +16,7 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="/admin">Admin Home</a></li>
+                    <li class="breadcrumb-item"><a href="/admin/courses">View All Courses</a></li>
                     <li class="breadcrumb-item"><a href="/admin/courses/add">Add Course</a></li>
                 </ol>
             </nav>
