--- a/views/pages/admin-batch.ejs
+++ b/views/pages/admin-batch.ejs
@@ -24,6 +24,9 @@
             <div class="card">
                 <div class="card-header">
                     View All Batches
+                    <a href="/admin/batch/add">
+                        <button type="button" class="btn btn-primary float-right">+ New Batch</button>
+                    </a>
                 </div>
 
 
