--- a/views/pages/admin-batch-registrations.ejs
+++ b/views/pages/admin-batch-registrations.ejs
@@ -24,7 +24,7 @@
             <br/>
             <div class="card">
                 <div class="card-header">
-                    View Registrations
+                    View Registrations For <u><%= courseName %></u>
                 </div>
 
 
