--- a/views/pages/admin-courses.ejs
+++ b/views/pages/admin-courses.ejs
@@ -24,6 +24,9 @@
             <div class="card">
                 <div class="card-header">
                     View All Courses
+                    <a href="/admin/courses/add">
+                        <button type="button" class="btn btn-primary float-right">+ New Course</button>
+                    </a>
                 </div>
 
 
@@ -47,20 +50,22 @@
                                 <div class="card-body">
                                     <a href="#" class="card-link">Edit</a>
                                     <a href="#" class="card-link">Hide</a>
-                                    <a href="#" class="card-link">Delete</a>
+                                    <a href="#" class="card-link">Delete</a><br/>
+                                    <a href="/admin/batch/add/<%= courses[key].alias %>" class="card-link">+ Start A New Batch</a>
                                 </div>
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item"><b>Fees:</b> <%= courses[key].fees %></li>
                                     <li class="list-group-item"><b>Sessions:</b> <%= courses[key].minsessions %>
                                         - <%= courses[key].maxsessions %></li>
                                     <li class="list-group-item"><b>Seats: </b> <%= courses[key].seats %></li>
+
+                                    <% if(batches){ %>
                                     <li class="list-group-item"><b>Currently Open Batches:</b>
-                                        <% if(batches){ %>
                                         <ol>
                                             <% for(index in batches){ %>
                                             <% if(batches[index].course_alias === courses[key].alias){ %>
                                             <li>
-                                                <a href="/admin/batch/registrations/<%= batches[index]._id %>"><%= batches[index].start_date %>
+                                                <a href="/admin/batch/registrations/<%= batches[index]._id %>/<%= courses[key].name %>"><%= batches[index].start_date %>
                                                     - <%= batches[index].end_date %>
                                                     @ <%= batches[index].venue %> [ <%= batches[index].visibility %>
                                                     ]</a>
@@ -72,7 +77,7 @@
                                             <% } %>
                                         </ol>
                                         <% }else{ %>
-                                        None
+                                        NO batches at all
                                         <% } %>
                                     </li>
                                 </ul>
