--- a/views/partials/admin-menu.ejs
+++ b/views/partials/admin-menu.ejs
@@ -1,33 +1,23 @@
+<h3>Menu</h3>
+<br/>
 <ul class="list-group">
     <a href="/admin">
-        <li class="list-group-item">Admin Home</li>
-    </a>
-    <a href="/admin/push">
-        <li class="list-group-item">Push Notifications</li>
+        <li class="list-group-item">Home</li>
     </a>
     <a href="/admin/courses">
-        <li class="list-group-item">View All Courses</li>
-    </a>
-    <a href="/admin/courses/add">
-        <li class="list-group-item">Add Course</li>
-    </a>
-    <a href="/admin/batch">
-        <li class="list-group-item">View All Batches</li>
-    </a>
-    <a href="/admin/batch/add">
-        <li class="list-group-item">Create New Batch</li>
-    </a>
-    <a href="/admin/registrations">
-        <li class="list-group-item">View All Users</li>
+        <li class="list-group-item">Courses</li>
     </a>
     <a href="/admin/venue/add">
-        <li class="list-group-item">Add new branch</li>
-    </a>
-    <a href="/admin/payments">
-        <li class="list-group-item">Payments</li>
+        <li class="list-group-item">Institute branches</li>
     </a>
     <a href="/admin/feedbacks">
         <li class="list-group-item">Feedbacks</li>
+    </a>
+    <a href="/admin/payments">
+        <li class="list-group-item"><s>Payments</s></li>
+    </a>
+    <a href="/admin/push">
+        <li class="list-group-item"><s>Push Notifications</s></li>
     </a>
     <a href="/logout">
         <li class="list-group-item">Logout</li>
