Some of Issue #15 requested features added

--- a/views/pages/404.ejs
+++ b/views/pages/404.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Admin Login | Codeshala | Get Better At Programing By Joining The Best programing courses in
+    <title>404 Page Not Found | Codeshala | Get Better At Programing By Joining The Best programing courses in
         Delhi NCR</title>
     <% include ../partials/header %>
     <% include ../partials/metadata %>
@@ -11,23 +11,10 @@
 <div class="container-fluid codeshala-banner">
     <div class="container text-center codeshala-course-heading">
         <h1>
-            Admin Login<br/>
+            404 Error | Page Not Found<br/>
         </h1>
         <br/>
-
-        <form action="/login" method="post">
-            <div>
-                <label>Username:</label>
-                <input type="text" name="username"/><br/>
-            </div>
-            <div>
-                <label>Password:</label>
-                <input type="password" name="password"/>
-            </div>
-            <div>
-                <input type="submit" value="Login"/>
-            </div>
-        </form>
+        <p>You somehow landed at a page which doesnt exists on our server. Our team is looking into this and trying to fix this soon.</p>
         <br/><br/><br/>
     </div>
 </div>
