Home page design for dashboard completed

--- a/views/pages/student-home.ejs
+++ b/views/pages/student-home.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Student Home | Codeshala | Get Better At Programing By Joining The Best programing courses in Delhi NCR</title>
+    <title>Codeshala Account | Get Better At Programing By Joining The Best programing courses in Delhi NCR</title>
     <% include ../partials/header %>
     <% include ../partials/metadata %>
 </head>
@@ -10,25 +10,77 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-3">
+            <img src="https://firebasestorage.googleapis.com/v0/b/manan-club.appspot.com/o/dp%2FPicsArt_1461782480504.jpg?alt=media&token=b0be2370-6bc8-4c3d-8d6e-d59d20496722"
+                 class="img-thumbnail" width="200px" height="200px">
+            <br/><br/>
             <% include ../partials/student-menu %>
         </div>
-        <div class="col-lg-9">
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="#">Student Home</a></li>
-                </ol>
-            </nav>
+        <div class="col-lg-6">
+            <h3>Vipin Khushu</h3>
+            <small>Phone: +91-<%= phoneno %></small>
             <br/>
-            <div class="card">
-                <div class="card-header">
-                    Student Dashboard
-                </div>
-                <div class="card-body">
-                    UNDER CONSTRUCTION
-                </div>
-            </div>
+            <small>Email: vipin@codeshala.org (Unverified)</small>
+            <br/>
+            <small>DOB: 21-10-1995</small>
+            <br/>
+            <small>College: YMCA</small>
+            <br/>
+            <br/><br/>
+            <small class="text-muted">
+                <p>Upcoming contests</p>
+                <hr>
+            </small>
+            <p style="line-height: 1.1;font-size:80%">- Pre Placement Series - III on 22/04/2018</p>
+            <p style="line-height: 1.1;font-size:80%">- Pre Placement Series - IV on 30/04/2018</p>
 
-            <br/><br/><br/><br/><br/>
+            <small class="text-muted">
+                <p>Assignments you missed</p>
+                <hr>
+            </small>
+            <p style="line-height: 1.1;font-size:80%">- Pre Placement Series - III on 22/04/2018</p>
+            <p style="line-height: 1.1;font-size:80%">- Pre Placement Series - IV on 30/04/2018</p>
+
+            <small class="text-muted">
+                <p>Contests you participated</p>
+                <hr>
+            </small>
+            <p style="line-height: 1.1;font-size:80%">- Pre Placement Series - III on 22/04/2018</p>
+            <p style="line-height: 1.1;font-size:80%">- Pre Placement Series - IV on 30/04/2018</p>
+
+            <small class="text-muted">
+                <p>Assignments you attempted</p>
+                <hr>
+            </small>
+            <p style="line-height: 1.1;font-size:80%">- Pre Placement Series - III on 22/04/2018</p>
+            <p style="line-height: 1.1;font-size:80%">- Pre Placement Series - IV on 30/04/2018</p>
+        </div>
+        <div class="col-lg-3">
+            <small class="text-muted">
+                <p>Fee tracker</p>
+                <hr>
+            </small>
+            <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0"
+                     aria-valuemax="100"></div>
+            </div>
+            <small class="float-right">INR 2500/8000</small>
+            <br/><br/>
+            <small class="text-muted">
+                <p>Courses you are currently enrolled</p>
+                <hr>
+            </small>
+            <p style="line-height: 1.1;font-size:80%"> - <a href="/course/full-stack-web-development-using-node-js">Full
+                    Stack Web Development Using Node.JS</a></p>
+
+            <small class="text-muted">
+                <p>Courses completed</p>
+                <hr>
+            </small>
+            <p style="line-height: 1.1;font-size:80%"> - <a href="/course/full-stack-web-development-using-node-js">Full
+                    Stack Web Development Using Node.JS</a></p>
+            <p style="line-height: 1.1;font-size:80%"> - <a href="/course/full-stack-web-development-using-node-js">Full
+                    Stack Web Development Using Node.JS</a></p>
+
         </div>
     </div>
 </div>
