--- a/views/partials/student-menu.ejs
+++ b/views/partials/student-menu.ejs
@@ -1,14 +1,24 @@
-<h3>Menu</h3>
-<br/>
 <ul class="list-group">
     <a href="#">
         <li class="list-group-item">Home</li>
     </a>
     <a href="#">
+        <li class="list-group-item">Resources</li>
+    </a>
+    <a href="#">
+        <li class="list-group-item">Notifications</li>
+    </a>
+    <a href="#">
+        <li class="list-group-item">Discussions</li>
+    </a>
+    <a href="#">
+        <li class="list-group-item">Submit feedback</li>
+    </a>
+    <a href="#">
         <li class="list-group-item">Profile</li>
     </a>
     <a href="#">
-        <li class="list-group-item">Fee Tracker</li>
+        <li class="list-group-item">Referals</li>
     </a>
     <a href="/logout">
         <li class="list-group-item">Logout</li>
