--- a/views/pages/student-login.ejs
+++ b/views/pages/student-login.ejs
@@ -113,6 +113,6 @@
 </body>
 
 <% include ../partials/footer-scripts %>
-<script src="/assets/js/registration.js"></script>
+<script src="/assets/js/registration.min.js"></script>
 
 </html>
