--- a/views/partials/footer-scripts.ejs
+++ b/views/partials/footer-scripts.ejs
@@ -103,7 +103,7 @@
 
 <!--<script src="https://use.fontawesome.com/bc4369196c.js"></script>-->
 
-<script src="/assets/js/init.js"></script>
+<script src="/assets/js/init.min.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115351307-1"></script>
 <script>
