--- a/views/pages/ide.ejs
+++ b/views/pages/ide.ejs
@@ -106,5 +106,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.3.1/ace.js" type="text/javascript" charset="utf-8"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.3.1/ext-language_tools.js" type="text/javascript"></script>
 <% include ../partials/footer-scripts %>
-
+<script src="/assets/js/ide.min.js"></script>
 </html>
