--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,4 +4,4 @@
 <!--CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
       integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-<link href="/assets/css/main.css" rel="stylesheet">
+<link href="/assets/css/main.min.css" rel="stylesheet">
